--- a/src/scss/QuestionBox.module.scss
+++ b/src/scss/QuestionBox.module.scss
@@ -1,7 +1,11 @@
 .card {
   max-width: 100%;
+  background-color: #fffbf5;
 }
 
+.card-question {
+  // background-color: #f8e8ee;
+}
 .card-container {
   overflow: scroll;
   height: 100vh;
