--- a/src/components/HelpNavigation/HelpNavigation.module.scss
+++ b/src/components/HelpNavigation/HelpNavigation.module.scss
@@ -1,13 +1,10 @@
-.navigation-menu {
+.HelpNavigation {
   background-color: #fff !important;
   border-inline-end: none !important;
   overflow: scroll;
   max-height: 100vh;
 }
 
-.ant-menu-item {
-  background-color: #fff !important;
-}
-.navigation-menu::-webkit-scrollbar {
+.HelpNavigation::-webkit-scrollbar {
   display: none;
 }
