--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -27,13 +27,11 @@
 .Form-Title {
   font-size: 30px;
   color: #2c3e50;
-  margin-bottom: 10px;
   letter-spacing: 2px;
 }
 
-.Form-Subtitle {
+.Form-Body {
   font-weight: normal;
   font-size: 20px;
   color: #666;
-  margin-bottom: 20px;
 }
