--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -1,3 +1,14 @@
+.Quiz {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: scroll;
+}
+
+.Quiz::-webkit-scrollbar {
+  display: none;
+}
 .Form {
   text-align: center;
   position: relative;
