--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,8 @@
 .Footer-Logo {
   width: 15rem;
+  @media screen and (max-width: 425px) {
+    width: 45vw;
+  }
 }
 
 .Footer-Heading {
@@ -7,33 +10,8 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
-}
 
-.Footer-Subheading {
-  font-size: 1.5rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-}
-
-.Footer-Content {
-  font-size: 0.9rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-}
-
-.Footer-Link {
-  color: #000;
-  text-decoration: none;
-  font-size: 0.9rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  transition: color 0.3s ease;
-}
-
-.Footer-Link:hover {
-  transform: scale(1.2rem);
-  color: #007bff;
+  @media screen and (max-width: 425px) {
+    font-size: 1.1rem;
+  }
 }
