--- a/src/components/QA Panel/QAPanel.module.scss
+++ b/src/components/QA Panel/QAPanel.module.scss
@@ -7,14 +7,17 @@
 .QAPanel-Carousel {
   overflow: scroll;
   height: 26rem;
+
   @media screen and (max-width: 425px) {
-    height: 40rem;
-    background-color: red($color: #000000);
+    height: 26rem;
   }
 }
 
 .QAPanel-NonQuestion {
   font-size: 1.2rem;
+  @media screen and (max-width: 425px) {
+    font-size: 1rem;
+  }
 }
 // delete the scroll bars for the carousel
 .QAPanel-Carousel::-webkit-scrollbar {
