--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -30,13 +30,16 @@
 
 /*headings*/
 .Form-Title {
-  font-size: 30px;
+  font-size: 1.6rem;
   color: #2c3e50;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .Form-Body {
   font-weight: normal;
-  font-size: 20px;
+  font-size: 1.2rem;
   color: #666;
+  @media screen and (max-width: 425px) {
+    font-size: 1rem;
+  }
 }
