--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -38,6 +38,7 @@
 .Form-Body {
   font-weight: normal;
   font-size: 1.2rem;
+  user-select: none;
   color: #666;
   @media screen and (max-width: 425px) {
     font-size: 1rem;
