--- a/src/components/QA Panel/QAPanel.module.scss
+++ b/src/components/QA Panel/QAPanel.module.scss
@@ -24,3 +24,22 @@
 .Card-Home {
   line-height: 2rem;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cbcbcb;
+  outline: 2px solid #fff;
+  outline-offset: -2px;
+  border: 0.1px solid #b7b7b7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #909090;
+}
