--- a/src/components/QA Panel/QAPanel.module.scss
+++ b/src/components/QA Panel/QAPanel.module.scss
@@ -26,20 +26,21 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 30px;
 }
 
 ::-webkit-scrollbar-track-piece {
   background-color: #fff;
+  width: 17px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #cbcbcb;
   outline: 2px solid #fff;
   outline-offset: -2px;
-  border: 0.1px solid #b7b7b7;
+  border: 0.5px solid #000;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #909090;
+  background-color: #5a5858;
 }
